syntax = "proto3";
package data.cashmere;

import "name.proto";

message NewSpecsRequest{
    string manage_id = 1;
    string entity_id = 2;
    .cashmere.Name name = 3;
    string description = 4;
    repeated bytes targets = 5;
}
message NewSpecsResponse{
    //成功反回id，失败返回错误信息
    string result = 1;
}

message ListSpecsRequest{
    string manage_id = 1;
    string entity_id = 2;
}
message ListSpecsResponse{
    repeated bytes specses = 1;
}

// 列出规格的预制件
message ListSpecsPrefabsRequest{
    string specs_id = 1;
}
message ListSpecsPrefabsResponse{
    repeated bytes prefabs = 1;
}

