syntax = "proto3";
package data.cashmere;

import "name.proto";

message NewSpecsAttributeRequest{
    string manage_id = 1;
    .cashmere.Name name = 2;
    string data_type = 3;
    string description = 4;
    bytes default_value = 5;
    int32 index = 6;
}
message NewSpecsAttributeResponse{
  string result = 1;
}


message DeleteSpecsAttributeRequest{
    string manage_id = 1;
    uint32 index = 2;
}
message DeleteSpecsAttributeResponse{
  string result = 1;
}

message GetSpecsAttributesRequest{
    string manage_id = 1;
}
message GetSpecsAttributesResponse{
  repeated bytes attributes = 1;
}